// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditShippingAddress should render correctly 1`] = `
<StyledComponent
  actionButtons={[Function]}
  addressFields={[Function]}
  defaultOptions={[Function]}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-gzVnrw",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  input {
    background-color: ",
          [Function],
          ";
  }

  .zip-code {
    .address-field {
      top: 2px;
    }
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(AddEditShippingAddress)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-gzVnrw",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  modalState={true}
  modalType="edit"
  toggleAddEditModal={[Function]}
/>
`;

exports[`AddEditShippingAddress should render correctly with modalType add 1`] = `
<StyledComponent
  actionButtons={[Function]}
  addressFields={[Function]}
  defaultOptions={[Function]}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-gzVnrw",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  input {
    background-color: ",
          [Function],
          ";
  }

  .zip-code {
    .address-field {
      top: 2px;
    }
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(AddEditShippingAddress)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-gzVnrw",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  modalState={true}
  modalType="add"
  toggleAddEditModal={[Function]}
/>
`;
